Tagged cells to be empty for participants. Tidy up and fixed various wording

--- a/notebooks/01-fundamentals.ipynb
+++ b/notebooks/01-fundamentals.ipynb
@@ -31,7 +31,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2941613a",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "2 * 3"
@@ -149,7 +153,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e750881e",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "weight_kg = 60.3"
@@ -190,7 +198,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c4f60c02",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "weight_lb = 2.2 * weight_kg"
@@ -226,15 +238,20 @@
     "## Built-in functions\n",
     "A function is:\n",
     "> A named group of instructions that is executed when the function’s name is used in the code. Occurrence of a function name in the code is a function call. Functions may process input arguments and return the result back. Functions may also be used for logically grouping together pieces of code. In such cases, they don’t need to return any meaningful value and can be written without the return statement completely. Such functions return a special value `None`, which is a way of saying “nothing”.\n",
+    "[Reference](https://swcarpentry.github.io/python-novice-inflammation/reference.html#function)\n",
     "\n",
-    "Python has with several built-in functions. In order to display information to the screen, we can use the `print` function:"
+    "Python has several built-in functions. In order to display information to the screen, we can use the `print` function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "062a1e5c",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "print(weight_lb)\n",
