--- a/notebooks/07-functions.ipynb
+++ b/notebooks/07-functions.ipynb
@@ -23,10 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10d012ce",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
    "outputs": [],
    "source": [
@@ -50,23 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f736bc86",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fahr_to_celsius(32)"
    ]
@@ -83,19 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98a9bc78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "freezing point of water: 0.0 C\n",
-      "boiling point of water: 100.0 C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('freezing point of water:', fahr_to_celsius(32), 'C')\n",
     "print('boiling point of water:', fahr_to_celsius(212), 'C')"
@@ -114,18 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c84bb615",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "freezing point of water in Kelvin: 273.15\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "def celsius_to_kelvin(temp_c):\n",
     "    return temp_c + 273.15\n",
@@ -145,18 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a1877728",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "boiling point of water in Kelvin: 373.15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fahr_to_kelvin(temp_f):\n",
     "    temp_c = fahr_to_celsius(temp_f)\n",
@@ -183,20 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "87a4ba90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(fahr_to_celsius(32) == 0)  # should print True\n",
     "assert fahr_to_celsius(32) == 0, \"32F should be 0 Celsius\""
@@ -204,11 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9bbb0c5b",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert celsius_to_kelvin(0) == 273.15, \"0 Celsius should be 273.15 Kelvin\""
@@ -216,10 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "227a037b",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
    "outputs": [],
    "source": [
@@ -237,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "692a521f",
    "metadata": {},
    "outputs": [],
@@ -268,30 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ad0a378f",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function fahr_to_celcius in module __main__:\n",
-      "\n",
-      "fahr_to_celcius(temp)\n",
-      "    Converts Fahrenheit to Celcius.\n",
-      "    \n",
-      "    Parameters:\n",
-      "        temp: Temperature in Fahr.\n",
-      "        \n",
-      "    Example: \n",
-      "        fahr_to_celcius(32) => 0.0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(fahr_to_celcius)"
    ]
@@ -311,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "4f27b1a0",
    "metadata": {},
    "outputs": [],
@@ -331,23 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a4258b73",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fahr_to_celcius() # No argument given, the default value is used."
    ]
@@ -364,21 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "10ff8861",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-17.77777777777778"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "fahr_to_celcius(temp=0) "
    ]
@@ -397,13 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3654277d",
    "metadata": {
     "lines_to_next_cell": 0,
-    "tags": [
-     "empty"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -423,10 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f53badb8",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
    "outputs": [],
    "source": [
@@ -445,31 +376,28 @@
     "- without parameters\n",
     "- with one parameter\n",
     "- with two parameters\n",
-    "- with the third parameter set to the value `77`"
+    "- with the third parameter set to the value `77`\n",
+    "- with providing value to two parameters only (e.g. `b` and `c`)\n",
+    "- with providing value to the parameters ordered as: `c,b,a`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6174b0b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a: 1 b: 2 c: 3\n",
-      "a: 55 b: 2 c: 3\n",
-      "a: 55 b: 66 c: 3\n",
-      "a: 1 b: 2 c: 77\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "display()\n",
     "display(55)\n",
     "display(55, 66)\n",
-    "display(c=77)"
+    "display(c=77)\n",
+    "display(b=22, c=77)\n",
+    "display(c=9,b=8,a=7)"
    ]
   },
   {
@@ -493,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b0fabc13",
    "metadata": {
     "tags": [
@@ -513,12 +441,12 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "Assert the function are correct:"
+    "Assert the function is correct:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0fad32ba",
    "metadata": {
     "tags": [
@@ -544,23 +472,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9b25c081",
    "metadata": {
     "tags": [
      "empty"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*wrapped_value*\n",
-      "+wrapped_value+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(wrap('wrapped_value'))\n",
     "print(wrap('wrapped_value', '+'))"
@@ -579,21 +498,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "207dd368",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42\n",
-      "0\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "f = 0\n",
     "k = 0\n",
@@ -609,13 +517,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7ba9612",
+   "metadata": {},
+   "source": [
+    "`k` is `0` because the `k` inside the function `f2k` doesn’t know about the `k` defined outside the function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "74238189",
    "metadata": {},
    "source": [
-    "```\n",
-    "`k` is `0` because the `k` inside the function `f2k` doesn’t know about the `k` defined outside the function.\n",
-    "```\n",
-    "\n",
     "***\n",
     "# Key Points\n",
     "* Define a function using `def function_name(parameter)`.\n",
