--- a/notebooks/02-numpy.ipynb
+++ b/notebooks/02-numpy.ipynb
@@ -24,9 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "027085c2",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "import numpy"
@@ -44,29 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a53165f0",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 1., ..., 3., 0., 0.],\n",
-       "       [0., 1., 2., ..., 1., 0., 1.],\n",
-       "       [0., 1., 1., ..., 2., 1., 1.],\n",
-       "       ...,\n",
-       "       [0., 1., 1., ..., 1., 1., 1.],\n",
-       "       [0., 0., 0., ..., 0., 2., 0.],\n",
-       "       [0., 0., 1., ..., 1., 1., 0.]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
    ]
@@ -82,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e25b8ba5",
    "metadata": {
     "lines_to_next_cell": 2
@@ -102,26 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1e5e0a17",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 1. ... 3. 0. 0.]\n",
-      " [0. 1. 2. ... 1. 0. 1.]\n",
-      " [0. 1. 1. ... 2. 1. 1.]\n",
-      " ...\n",
-      " [0. 1. 1. ... 1. 1. 1.]\n",
-      " [0. 0. 0. ... 0. 2. 0.]\n",
-      " [0. 0. 1. ... 1. 1. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
@@ -136,18 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a620c008",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(data))"
    ]
@@ -162,20 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "01c36e84",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data.dtype)"
    ]
@@ -190,20 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e5147f71",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60, 40)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data.shape)"
    ]
@@ -219,20 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "45573836",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "middle value in data: 13.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('middle value in data:', data[30, 20])"
    ]
@@ -255,20 +208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "05060f8d",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first value in data: 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('first value in data:', data[0, 0])"
    ]
@@ -287,23 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "931ac33b",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 1. 3. 1. 2. 4. 7. 8. 3.]\n",
-      " [0. 1. 2. 1. 2. 1. 3. 2. 2. 6.]\n",
-      " [0. 1. 1. 3. 3. 2. 6. 2. 5. 9.]\n",
-      " [0. 0. 2. 0. 4. 2. 2. 1. 6. 7.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data[0:4, 0:10])"
    ]
@@ -330,24 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6fa49218",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 0. 1. 2. 2. 4. 2. 1. 6. 4.]\n",
-      " [0. 0. 2. 2. 4. 2. 2. 5. 5. 8.]\n",
-      " [0. 0. 1. 2. 3. 1. 2. 3. 5. 3.]\n",
-      " [0. 0. 0. 3. 1. 5. 6. 5. 5. 8.]\n",
-      " [0. 1. 1. 2. 1. 3. 5. 3. 5. 8.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data[5:10, 0:10])"
    ]
@@ -362,23 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "29672cb1",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "small is:\n",
-      "[[2. 3. 0. 0.]\n",
-      " [1. 1. 0. 1.]\n",
-      " [2. 2. 1. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "small = data[:3, 36:]\n",
     "print('small is:')\n",
@@ -396,20 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "89add13d",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.14875\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(numpy.mean(data))"
    ]
@@ -424,22 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ddac44fa",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "maximum inflammation: 20.0\n",
-      "minimum inflammation: 0.0\n",
-      "standard deviation: 4.613833197118566\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('maximum inflammation:', numpy.max(data))\n",
     "print('minimum inflammation:', numpy.min(data))\n",
@@ -457,137 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3e24332c",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function std in module numpy:\n",
-      "\n",
-      "std(a, axis=None, dtype=None, out=None, ddof=0, keepdims=<no value>, *, where=<no value>)\n",
-      "    Compute the standard deviation along the specified axis.\n",
-      "    \n",
-      "    Returns the standard deviation, a measure of the spread of a distribution,\n",
-      "    of the array elements. The standard deviation is computed for the\n",
-      "    flattened array by default, otherwise over the specified axis.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    a : array_like\n",
-      "        Calculate the standard deviation of these values.\n",
-      "    axis : None or int or tuple of ints, optional\n",
-      "        Axis or axes along which the standard deviation is computed. The\n",
-      "        default is to compute the standard deviation of the flattened array.\n",
-      "    \n",
-      "        .. versionadded:: 1.7.0\n",
-      "    \n",
-      "        If this is a tuple of ints, a standard deviation is performed over\n",
-      "        multiple axes, instead of a single axis or all the axes as before.\n",
-      "    dtype : dtype, optional\n",
-      "        Type to use in computing the standard deviation. For arrays of\n",
-      "        integer type the default is float64, for arrays of float types it is\n",
-      "        the same as the array type.\n",
-      "    out : ndarray, optional\n",
-      "        Alternative output array in which to place the result. It must have\n",
-      "        the same shape as the expected output but the type (of the calculated\n",
-      "        values) will be cast if necessary.\n",
-      "    ddof : int, optional\n",
-      "        Means Delta Degrees of Freedom.  The divisor used in calculations\n",
-      "        is ``N - ddof``, where ``N`` represents the number of elements.\n",
-      "        By default `ddof` is zero.\n",
-      "    keepdims : bool, optional\n",
-      "        If this is set to True, the axes which are reduced are left\n",
-      "        in the result as dimensions with size one. With this option,\n",
-      "        the result will broadcast correctly against the input array.\n",
-      "    \n",
-      "        If the default value is passed, then `keepdims` will not be\n",
-      "        passed through to the `std` method of sub-classes of\n",
-      "        `ndarray`, however any non-default value will be.  If the\n",
-      "        sub-class' method does not implement `keepdims` any\n",
-      "        exceptions will be raised.\n",
-      "    \n",
-      "    where : array_like of bool, optional\n",
-      "        Elements to include in the standard deviation.\n",
-      "        See `~numpy.ufunc.reduce` for details.\n",
-      "    \n",
-      "        .. versionadded:: 1.20.0\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    standard_deviation : ndarray, see dtype parameter above.\n",
-      "        If `out` is None, return a new array containing the standard deviation,\n",
-      "        otherwise return a reference to the output array.\n",
-      "    \n",
-      "    See Also\n",
-      "    --------\n",
-      "    var, mean, nanmean, nanstd, nanvar\n",
-      "    :ref:`ufuncs-output-type`\n",
-      "    \n",
-      "    Notes\n",
-      "    -----\n",
-      "    The standard deviation is the square root of the average of the squared\n",
-      "    deviations from the mean, i.e., ``std = sqrt(mean(x))``, where\n",
-      "    ``x = abs(a - a.mean())**2``.\n",
-      "    \n",
-      "    The average squared deviation is typically calculated as ``x.sum() / N``,\n",
-      "    where ``N = len(x)``. If, however, `ddof` is specified, the divisor\n",
-      "    ``N - ddof`` is used instead. In standard statistical practice, ``ddof=1``\n",
-      "    provides an unbiased estimator of the variance of the infinite population.\n",
-      "    ``ddof=0`` provides a maximum likelihood estimate of the variance for\n",
-      "    normally distributed variables. The standard deviation computed in this\n",
-      "    function is the square root of the estimated variance, so even with\n",
-      "    ``ddof=1``, it will not be an unbiased estimate of the standard deviation\n",
-      "    per se.\n",
-      "    \n",
-      "    Note that, for complex numbers, `std` takes the absolute\n",
-      "    value before squaring, so that the result is always real and nonnegative.\n",
-      "    \n",
-      "    For floating-point input, the *std* is computed using the same\n",
-      "    precision the input has. Depending on the input data, this can cause\n",
-      "    the results to be inaccurate, especially for float32 (see example below).\n",
-      "    Specifying a higher-accuracy accumulator using the `dtype` keyword can\n",
-      "    alleviate this issue.\n",
-      "    \n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> a = np.array([[1, 2], [3, 4]])\n",
-      "    >>> np.std(a)\n",
-      "    1.1180339887498949 # may vary\n",
-      "    >>> np.std(a, axis=0)\n",
-      "    array([1.,  1.])\n",
-      "    >>> np.std(a, axis=1)\n",
-      "    array([0.5,  0.5])\n",
-      "    \n",
-      "    In single precision, std() can be inaccurate:\n",
-      "    \n",
-      "    >>> a = np.zeros((2, 512*512), dtype=np.float32)\n",
-      "    >>> a[0, :] = 1.0\n",
-      "    >>> a[1, :] = 0.1\n",
-      "    >>> np.std(a)\n",
-      "    0.45000005\n",
-      "    \n",
-      "    Computing the standard deviation in float64 is more accurate:\n",
-      "    \n",
-      "    >>> np.std(a, dtype=np.float64)\n",
-      "    0.44999999925494177 # may vary\n",
-      "    \n",
-      "    Specifying a where argument:\n",
-      "    \n",
-      "    >>> a = np.array([[14, 8, 11, 10], [7, 9, 10, 11], [10, 15, 5, 10]])\n",
-      "    >>> np.std(a)\n",
-      "    2.614064523559687 # may vary\n",
-      "    >>> np.std(a, where=[[True], [True], [False]])\n",
-      "    2.0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(numpy.std)"
    ]
@@ -603,9 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f70ef5f1",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
    "outputs": [],
    "source": [
     "patient_0 = data[0, :] # 0 on the first axis (rows), everything on the second (columns)"
@@ -621,20 +403,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "089f22d0",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(numpy.max(patient_0))"
    ]
@@ -649,20 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d4b80b97",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "maximum inflammation for patient 2: 19.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('maximum inflammation for patient 2:', numpy.max(data[2, :]))"
    ]
@@ -682,26 +448,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8b9268f1",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 2,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.          0.45        1.11666667  1.75        2.43333333  3.15\n",
-      "  3.8         3.88333333  5.23333333  5.51666667  5.95        5.9\n",
-      "  8.35        7.73333333  8.36666667  9.5         9.58333333 10.63333333\n",
-      " 11.56666667 12.35       13.25       11.96666667 11.03333333 10.16666667\n",
-      " 10.          8.66666667  9.15        7.25        7.33333333  6.58333333\n",
-      "  6.06666667  5.95        5.11666667  3.6         3.3         3.56666667\n",
-      "  2.48333333  1.5         1.13333333  0.56666667]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(numpy.mean(data, axis=0))"
    ]
@@ -716,18 +471,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "07ece672",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(40,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(numpy.mean(data, axis=0).shape)"
    ]
@@ -743,54 +490,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2c8c71cd",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5.45  5.425 6.1   5.9   5.55  6.225 5.975 6.65  6.625 6.525 6.775 5.8\n",
-      " 6.225 5.75  5.225 6.3   6.55  5.7   5.85  6.55  5.775 5.825 6.175 6.1\n",
-      " 5.8   6.425 6.05  6.025 6.175 6.55  6.175 6.35  6.725 6.125 7.075 5.725\n",
-      " 5.925 6.15  6.075 5.75  5.975 5.725 6.3   5.9   6.75  5.925 7.225 6.15\n",
-      " 5.95  6.275 5.7   6.1   6.825 5.975 6.725 5.7   6.25  6.4   7.05  5.9  ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(numpy.mean(data, axis=1))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "00f9a77f",
+   "id": "52e25951-b1f7-4bcd-97c3-400d08ce9e3d",
    "metadata": {},
    "source": [
     "# Exercices\n",
-    "#### 1. Slicing\n",
-    "From the `data` variable defined previously.\n",
-    "\n",
-    " Print the first patient, first inflammation value:"
+    "#### 1. Slicing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "63fb5e1d",
+   "execution_count": null,
+   "id": "f35a606d-64b3-4a46-ba5b-14ed2579004c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "data = numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ba13d4-93b3-4a35-a237-b018a9bab453",
+   "metadata": {},
+   "source": [
+    "Print the first patient, first inflammation value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63fb5e1d",
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "print(data[0,0])"
    ]
@@ -805,18 +551,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c169703d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "print(data[1,4])"
    ]
@@ -831,23 +573,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "437c73a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 1., 3.],\n",
-       "       [0., 1., 2., 1.],\n",
-       "       [0., 1., 1., 3.]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "data[0:3, 0:4]"
    ]
