--- a/notebooks/04-lists.ipynb
+++ b/notebooks/04-lists.ipynb
@@ -26,18 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "77b7fd89",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "odds = []         # empty list\n",
     "odds = [1,3,5,7]  # a list with 4 elements\n",
@@ -56,22 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ecf5e029",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first element: 1\n",
-      "last element: 7\n",
-      "\"-1\" element: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('first element:', odds[0])\n",
     "print('last element:', odds[3])\n",
@@ -96,78 +82,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "069a9f8c",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[0:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dab53b9c",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "21fda86f",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ef01f25c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[::2])"
    ]
@@ -187,78 +147,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "41ba325d",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fadfc3dd",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[-3:-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1fb2fa80",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[:-3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ebf4782d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "print(odds[-4:])"
    ]
@@ -275,38 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5699de0d",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 5, 3, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "40c743d3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 5, 3, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[4:-5:-1])"
    ]
@@ -323,21 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9a6b8305",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "names is originally: ['Curie', 'Darwing', 'Turing']\n",
-      "final value of names: ['Curie', 'Darwin', 'Turing']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names = ['Curie', 'Darwing', 'Turing']  # typo in Darwin's name\n",
     "print('names is originally:', names)\n",
@@ -357,26 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1f2725e9",
    "metadata": {
     "tags": [
      "raises-exception"
     ]
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDarwin\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'Darwin'\n",
     "name[0] = 'd'"
@@ -396,10 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "24cf6340",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
    "outputs": [],
    "source": [
@@ -418,21 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ce093b5e",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[99, 3, 5, 7]\n",
-      "[99, 3, 5, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "other[0] = 99\n",
     "print(other)\n",
@@ -452,21 +344,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a496a5a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[99, 3, 5, 7]\n",
-      "[1, 3, 5, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "other = list(odds) # or odds.copy()\n",
+    "other = odds.copy() # or list(odds)\n",
     "odds[0] = 1\n",
     "print(other)\n",
     "print(odds)"
@@ -484,20 +367,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "97d5d212",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "odds.append(9)\n",
     "print(odds)"
@@ -515,19 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "00188742",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7]\n",
-      "[3, 5, 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "odds.pop(-1) # Removes the last element\n",
     "print(odds)\n",
@@ -547,21 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8e032b59",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5, 7]\n",
-      "[7, 5, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "odds.sort()\n",
     "print(odds)\n",
@@ -581,19 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0e44e21a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5, 7]\n",
-      "[7, 5, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted_odds = sorted(odds)\n",
     "print(sorted_odds)\n",
@@ -612,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d7d9efca",
    "metadata": {},
    "outputs": [],
@@ -633,21 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f68bcf46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drosophila\n",
-      "melanogaster\n",
-      "['X', 'Y', 2]\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(name[0:10])\n",
     "print(name[11:])\n",
@@ -667,18 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c44b3b9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 5, 3, ['X', 'Y', 2, 3, 4]]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "odds.append(chromosomes)\n",
     "print(odds)"
@@ -696,20 +529,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3b34e139",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 5, 3, ['X', 'Y', 2, 3, 4], 'X', 'Y', 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds + chromosomes)"
    ]
@@ -733,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9fdab8d7",
    "metadata": {
     "lines_to_next_cell": 0
@@ -745,18 +570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8e21293e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "111 8 89\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "# print second, sixth and last element\n",
     "print(nums[1], nums[5], nums[-1])"
