--- a/notebooks/05-loops.ipynb
+++ b/notebooks/05-loops.ipynb
@@ -20,10 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e6adef34",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
    "outputs": [],
    "source": [
@@ -42,23 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "afc64bd4",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(odds[0])\n",
     "print(odds[1])\n",
@@ -78,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1c1e3cc3",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -86,28 +78,7 @@
      "raises-exception"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(odds[\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(odds[\u001b[38;5;241m2\u001b[39m])\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43modds\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "odds = [1, 3, 5]\n",
     "print(odds[0])\n",
@@ -134,22 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "36762d07",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in odds:\n",
     "    print(num)"
@@ -167,23 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dfae494f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "odds = [1, 3, 5, 7, 9, 11]\n",
     "for num in odds:\n",
@@ -212,23 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e5e927b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "9\n",
-      "11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "odds = [1, 3, 5, 7, 9, 11]\n",
     "for banana in odds:\n",
@@ -247,18 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2c9d4e17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 names in the list.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "length = 0\n",
     "names = ['Curie', 'Darwin', 'Turing']\n",
@@ -279,21 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dbaf6db1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Curie\n",
-      "Darwin\n",
-      "Turing\n",
-      "after the loop, name is Turing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'Rosalind'\n",
     "for name in ['Curie', 'Darwin', 'Turing']:\n",
@@ -313,20 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c5871bde",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "tags": [
+     "empty"
+    ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len([0, 1, 2, 3]))"
    ]
@@ -346,20 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "82b7aa51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "4\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(range(6)))     # 0,1,2,3,4,5\n",
     "print(len(range(2,6)))   # 2,3,4,5\n",
@@ -380,28 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a0c071b5",
    "metadata": {
     "tags": [
      "empty"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "6\n",
-      "9\n",
-      "12\n",
-      "15\n",
-      "18\n",
-      "21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(3, 22, 3):\n",
     "    print(i)"
@@ -421,18 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "aae207e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "562\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
    "source": [
     "summed = 0\n",
     "for num in [124, 402, 36]:\n",
