Updated paths in solutions notebook to match participant notebooks

--- a/solutions/00-introduction.ipynb
+++ b/solutions/00-introduction.ipynb
@@ -106,7 +106,7 @@
     "1. Calculate the average inflammation per day across all patients.\n",
     "2. Plot the result to discuss and share with colleagues.\n",
     "\n",
-    "![image](../images/lesson-overview.svg)\n",
+    "![image](images/lesson-overview.svg)\n",
     "\n",
     "## Data format\n",
     "The data sets are stored in comma-separated values (CSV) format:\n",
