--- a/solutions/02-numpy.ipynb
+++ b/solutions/02-numpy.ipynb
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
+    "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
    ]
   },
   {
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "data = numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "Programming languages like Fortran, MATLAB and R start counting at 1 because that’s what human beings have done for thousands of years. Languages in the C family (including C++, Java, Perl, and Python) count from 0 because it represents an offset from the first value in the array (the second value is offset by one index from the first value). As a result, if we have an M×N array in Python, its indices go from 0 to M-1 on the first axis and 0 to N-1 on the second.\n",
-    "![image](../images/python-zero-index.svg)\n",
+    "![image](images/python-zero-index.svg)\n",
     "\n",
     "# Slicing data\n",
     "Above we selected a single element, but we can select whole sections or slice. For instance, we can select the first ten days (columns) for the first four patients (rows) with:"
@@ -439,7 +439,7 @@
    "metadata": {},
    "source": [
     "Operations can be done on rows or columns, which we call _axis_.\n",
-    "![image](../images/python-operations-across-axes.png)\n",
+    "![image](images/python-operations-across-axes.png)\n",
     "\n",
     "With _axis_, we can get the maximum inflammation for each patient over all days (left) or the average for each day (right).\n",
     "\n",
@@ -516,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
    ]
   },
   {
