--- a/solutions/03-matplotlib.ipynb
+++ b/solutions/03-matplotlib.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "import numpy\n",
-    "data = numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')"
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "import numpy\n",
     "import matplotlib.pyplot\n",
     "\n",
-    "data = numpy.loadtxt(fname='../data/inflammation-01.csv', delimiter=',')\n",
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')\n",
     "\n",
     "fig = matplotlib.pyplot.figure(figsize=(10.0, 3.0))\n",
     "\n",
