--- a/solutions/05-loops.ipynb
+++ b/solutions/05-loops.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "A representation of the example above is:\n",
     "\n",
-    "![image](../images/loops_image_num.png)\n",
+    "![image](images/loops_image_num.png)\n",
     "\n",
     "The variable name can be anything, such as `banana`, but it is preferable to choose meaningful names:"
    ]
