--- a/solutions/06-choices.ipynb
+++ b/solutions/06-choices.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "The above can be visulize with:\n",
     "\n",
-    "![image](../images/python-flowchart-conditional.png)\n",
+    "![image](images/python-flowchart-conditional.png)\n",
     "\n",
     "We can also tests several conditions using an `elif` which means _else if_."
    ]
