--- a/solutions/07-functions.ipynb
+++ b/solutions/07-functions.ipynb
@@ -44,7 +44,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "![image](../images/python-function.svg)\n",
+    "![image](images/python-function.svg)\n",
     "\n",
     "The function definition opens with the keyword `def` followed by the name of the function (`fahr_to_celsius`) and a parenthesized list of parameter names (`temp`). The body of the function — the statements that are executed when it runs — is indented below the definition line. The body concludes with a `return` keyword followed by the return value.\n",
     "\n",
