Added note about copilot or ChatGPT

--- a/solutions/00-introduction.ipynb
+++ b/solutions/00-introduction.ipynb
@@ -123,7 +123,17 @@
     "\n",
     "For example, value `6` at row `3` column `7` of the data set above means that the third patient was experiencing inflammation six times on the seventh day of the clinical study.\n",
     "\n",
-    "In order to analyze this data and report to our colleagues, we’ll have to learn a little bit about programming."
+    "In order to analyze this data and report to our colleagues, we’ll have to learn a little bit about programming.\n",
+    "\n",
+    "# A word on Copilot or ChatGPT\n",
+    "While it may seem that using co-pilot or ChatGPT may help, it actually hinder learning by providing part of code that may or may not make sense to you.\n",
+    "\n",
+    "It can be useful to write test cases to validate your code, and help think of corner cases, but could also hinder your development.\n",
+    "<div class=\"alert alert-success\">\n",
+    "  <strong>Do not use it while learning programming!</strong>\n",
+    "</div>\n",
+    "\n",
+    "**Bottom line** : it is best to understand what these tools suggests, before using them."
    ]
   }
  ],
