Added matplotlib url for documentation

--- a/03-matplotlib.ipynb
+++ b/03-matplotlib.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "***\n",
     "\n",
+    "Matplotlib documentation: https://matplotlib.org/stable/\n",
+    "\n",
     "# Visualizing data\n",
     "\n",
     "In order to visualize data, we first need to import the library:"
@@ -182,6 +184,10 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
