--- a/solutions/03-matplotlib.ipynb
+++ b/solutions/03-matplotlib.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "***\n",
     "\n",
+    "Matplotlib documentation: https://matplotlib.org/stable/\n",
+    "\n",
     "# Visualizing data\n",
     "\n",
     "In order to visualize data, we first need to import the library:"
