--- a/05-loops.ipynb
+++ b/05-loops.ipynb
@@ -143,7 +143,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "The improved version is calling the print fonction for each element of the sequence. The general form of a loop is (note the indentation):\n",
+    "The improved version is calling the print function for each element of the sequence. The general form of a loop is (note the indentation):\n",
     "```\n",
     "for element in sequence:\n",
     "    do things using element\n",
@@ -175,7 +175,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "Here’s another loop that repeatedly updates a variable. In this example note the indentation of the `print` statement, indicating that it's outside the loop, therefore excuted after:"
+    "Here’s another loop that repeatedly updates a variable. In this example note the indentation of the `print` statement, indicating that it's outside the loop, therefore executed after:"
    ]
   },
   {
@@ -325,6 +325,10 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
