--- a/06-choices.ipynb
+++ b/06-choices.ipynb
@@ -82,7 +82,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "We can also express conditions with relationnal operators:"
+    "We can also express conditions with relational operators:"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "The above can be visulize with:\n",
+    "The above can be visualized with:\n",
     "\n",
     "![image](images/python-flowchart-conditional.png)\n",
     "\n",
@@ -384,6 +384,10 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
