--- a/07-functions.ipynb
+++ b/07-functions.ipynb
@@ -115,7 +115,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "And lets not forget about converting Fahrenheit to Kelvin! We can reuse our previous functions to compose a new function:"
+    "And let’s not forget about converting Fahrenheit to Kelvin! We can reuse our previous functions to compose a new function:"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "source": [
     "# Exercises\n",
     "#### 1.\n",
-    "Base on the following function:"
+    "Based on the following function:"
    ]
   },
   {
@@ -511,11 +511,15 @@
     "* Put docstrings in functions to provide help for that function.\n",
     "* Specify default values for parameters when defining a function using `name=value` in the parameter list.\n",
     "* Parameters can be passed by matching based on name, by position, or by omitting them (in which case the default value is used).\n",
-    "* Put code whose parameters change frequently in a function, then call it with different parameter values to customize its behavior."
+    "* Put code whose parameters change frequently in a function, then call it with different parameter values to customize its behaviour."
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
