--- a/solutions/01-fundamentals.ipynb
+++ b/solutions/01-fundamentals.ipynb
@@ -115,10 +115,10 @@
     "* floating point numbers (`float`)\n",
     "* strings (`str`)\n",
     "\n",
-    "You may also come accross:\n",
+    "You may also come across:\n",
     "- None\n",
     "- List\n",
-    "- Booleans\n",
+    "- Boolean\n",
     "- Dictionary\n",
     "- Set\n",
     "- Tuples\n",
@@ -265,7 +265,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "When we want to make use of a function, referred to as calling the function, we follow its name by parentheses. The parentheses are important: if you leave them off, the function doesn’t actually run! Sometimes you will include values or variables inside the parentheses for the function to use. In the case of `print`, we use the parentheses to tell the function what value we want to display. We will learn more about how functions work and how to create our own in later chapter.\n",
+    "When we want to make use of a function, referred to as calling the function, we follow its name by parentheses. The parentheses are important: if you leave them off, the function doesn’t actually run! Sometimes you will include values or variables inside the parentheses for the function to use. In the case of `print`, we use the parentheses to tell the function what value we want to display. We will learn more about how functions work and how to create our own in a later chapter.\n",
     "\n",
     "We can display multiple things at once using only one print call:"
    ]
@@ -287,7 +287,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "We can also embed another function call, for example if we'd print the value's data type:"
+    "We can also embed another function call, for example if we printed the value's data type:"
    ]
   },
   {
