--- a/solutions/04-lists.ipynb
+++ b/solutions/04-lists.ipynb
@@ -289,7 +289,7 @@
    "source": [
     "We've seen previously that strings are *immutable* and lists are *mutable*.\n",
     "\n",
-    "We also need to be careful when modyfing data in-place. What happens if two variables refers to the same list?"
+    "We also need to be careful when modifying data in-place. What happens if two variables refer to the same list?"
    ]
   },
   {
@@ -339,7 +339,7 @@
    },
    "source": [
     "No since both variable from the assignation points to the same data in memory.\n",
-    "In order to effectively copy we construct another list from the original one:"
+    "In order to effectively copy, we construct another list from the original one:"
    ]
   },
   {
@@ -362,7 +362,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "A `list` also has methods. We can use `append` to add element at the end of the list. Or see `help(list)` to get the list of available methods."
+    "A `list` also has methods. We can use `append` to add an element at the end of the list. Or see `help(list)` to get the list of available methods."
    ]
   },
   {
@@ -433,7 +433,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "Or we could use the buit-in function `sorted`. In this case, the original data structure is not touched, a copy is returned."
+    "Or we could use the built-in function `sorted`. In this case, the original data structure is not touched, a copy is returned."
    ]
   },
   {
