--- a/solutions/07-functions.ipynb
+++ b/solutions/07-functions.ipynb
@@ -120,7 +120,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "And lets not forget about converting Fahrenheit to Kelvin! We can reuse our previous functions to compose a new function:"
+    "And let’s not forget about converting Fahrenheit to Kelvin! We can reuse our previous functions to compose a new function:"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "source": [
     "# Exercises\n",
     "#### 1.\n",
-    "Base on the following function:"
+    "Based on the following function:"
    ]
   },
   {
@@ -455,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "# Assert that our function are correct\n",
+    "# Assert that our function is correct\n",
     "assert wrap('1') == \"*1*\"\n",
     "assert wrap('1', '+') == \"+1+\""
    ]
@@ -542,7 +542,7 @@
     "* Put docstrings in functions to provide help for that function.\n",
     "* Specify default values for parameters when defining a function using `name=value` in the parameter list.\n",
     "* Parameters can be passed by matching based on name, by position, or by omitting them (in which case the default value is used).\n",
-    "* Put code whose parameters change frequently in a function, then call it with different parameter values to customize its behavior."
+    "* Put code whose parameters change frequently in a function, then call it with different parameter values to customize its behaviour."
    ]
   }
  ],
