--- a/02-numpy.ipynb
+++ b/02-numpy.ipynb
@@ -39,7 +39,7 @@
    "id": "10269841",
    "metadata": {},
    "source": [
-    "Importing a library makes its functionnalities available for us to use.\n",
+    "Importing a library makes its functionalities available for us to use.\n",
     "\n",
     "Once we’ve imported the library, we can ask the library to read our data file for us:"
    ]
@@ -571,13 +571,18 @@
     "* Use `array[x, y]` to select a single element from a 2D numpy array.\n",
     "* Array indices start at `0`, not `1`.\n",
     "* Use `low:high` to specify a slice that includes the indices from `low` to `high-1`.\n",
-    "* Use `# some kind of explanation` to add comments to programs.\n",
+    "* Use `# some kind of explanation to add comments to programs.\n",
     "* Use `numpy.mean(array)`, `numpy.max(array)`, and `numpy.min(array)` to calculate simple statistics.\n",
     "* Use `numpy.mean(array, axis=0)` or `numpy.mean(array, axis=1)` to calculate statistics across the specified axis."
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "cell_metadata_filter": "autoscroll,scrolled,tags",
+   "formats": "ipynb,md",
+   "notebook_metadata_filter": "all"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
