--- a/solutions/02-numpy.ipynb
+++ b/solutions/02-numpy.ipynb
@@ -41,7 +41,7 @@
    "id": "10269841",
    "metadata": {},
    "source": [
-    "Importing a library makes its functionnalities available for us to use.\n",
+    "Importing a library makes its functionalities available for us to use.\n",
     "\n",
     "Once we’ve imported the library, we can ask the library to read our data file for us:"
    ]
@@ -599,7 +599,7 @@
     "* Use `array[x, y]` to select a single element from a 2D numpy array.\n",
     "* Array indices start at `0`, not `1`.\n",
     "* Use `low:high` to specify a slice that includes the indices from `low` to `high-1`.\n",
-    "* Use `# some kind of explanation` to add comments to programs.\n",
+    "* Use `# some kind of explanation to add comments to programs.\n",
     "* Use `numpy.mean(array)`, `numpy.max(array)`, and `numpy.min(array)` to calculate simple statistics.\n",
     "* Use `numpy.mean(array, axis=0)` or `numpy.mean(array, axis=1)` to calculate statistics across the specified axis."
    ]
