--- a/solutions/05-loops.ipynb
+++ b/solutions/05-loops.ipynb
@@ -152,7 +152,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "The improved version is calling the print fonction for each element of the sequence. The general form of a loop is (note the indentation):\n",
+    "The improved version is calling the print function for each element of the sequence. The general form of a loop is (note the indentation):\n",
     "```\n",
     "for element in sequence:\n",
     "    do things using element\n",
@@ -184,7 +184,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "Here’s another loop that repeatedly updates a variable. In this example note the indentation of the `print` statement, indicating that it's outside the loop, therefore excuted after:"
+    "Here’s another loop that repeatedly updates a variable. In this example note the indentation of the `print` statement, indicating that it's outside the loop, therefore executed after:"
    ]
   },
   {
