--- a/solutions/06-choices.ipynb
+++ b/solutions/06-choices.ipynb
@@ -86,7 +86,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "We can also express conditions with relationnal operators:"
+    "We can also express conditions with relational operators:"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "lines_to_next_cell": 0
    },
    "source": [
-    "The above can be visulize with:\n",
+    "The above can be visualized with:\n",
     "\n",
     "![image](images/python-flowchart-conditional.png)\n",
     "\n",
