Fixed typo in function name

--- a/07-functions.ipynb
+++ b/07-functions.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fahr_to_celcius(temp):\n",
+    "def fahr_to_celsius(temp):\n",
     "    \"\"\"\n",
     "    Converts Fahrenheit to Celcius.\n",
     "    \n",
@@ -206,7 +206,7 @@
     "        temp: Temperature in Fahr.\n",
     "        \n",
     "    Example: \n",
-    "        fahr_to_celcius(32) => 0.0\n",
+    "        fahr_to_celsius(32) => 0.0\n",
     "    \"\"\"\n",
     "    # this is a comment\n",
     "    return ((temp - 32) * (5/9))"
@@ -231,7 +231,7 @@
    },
    "outputs": [],
    "source": [
-    "help(fahr_to_celcius)"
+    "help(fahr_to_celsius)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fahr_to_celcius(temp=32):\n",
+    "def fahr_to_celsius(temp=32):\n",
     "    \"\"\"\n",
     "    Converts Fahrenheit to Celcius.\n",
     "    \n",
@@ -262,7 +262,7 @@
     "        temp: Temperature in Fahr. int, default: 32\n",
     "        \n",
     "    Example: \n",
-    "        fahr_to_celcius(32) => 0.0\n",
+    "        fahr_to_celsius(32) => 0.0\n",
     "    \"\"\"\n",
     "    return ((temp - 32) * (5/9))"
    ]
