--- a/solutions/07-functions.ipynb
+++ b/solutions/07-functions.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fahr_to_celcius(temp):\n",
+    "def fahr_to_celsius(temp):\n",
     "    \"\"\"\n",
     "    Converts Fahrenheit to Celcius.\n",
     "    \n",
@@ -213,7 +213,7 @@
     "        temp: Temperature in Fahr.\n",
     "        \n",
     "    Example: \n",
-    "        fahr_to_celcius(32) => 0.0\n",
+    "        fahr_to_celsius(32) => 0.0\n",
     "    \"\"\"\n",
     "    # this is a comment\n",
     "    return ((temp - 32) * (5/9))"
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "help(fahr_to_celcius)"
+    "help(fahr_to_celsius)"
    ]
   },
   {
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fahr_to_celcius(temp=32):\n",
+    "def fahr_to_celsius(temp=32):\n",
     "    \"\"\"\n",
     "    Converts Fahrenheit to Celcius.\n",
     "    \n",
@@ -269,7 +269,7 @@
     "        temp: Temperature in Fahr. int, default: 32\n",
     "        \n",
     "    Example: \n",
-    "        fahr_to_celcius(32) => 0.0\n",
+    "        fahr_to_celsius(32) => 0.0\n",
     "    \"\"\"\n",
     "    return ((temp - 32) * (5/9))"
    ]
@@ -286,7 +286,7 @@
    },
    "outputs": [],
    "source": [
-    "fahr_to_celcius() # No argument given, the default value is used."
+    "fahr_to_celsius() # No argument given, the default value is used."
    ]
   },
   {
@@ -310,7 +310,7 @@
    },
    "outputs": [],
    "source": [
-    "fahr_to_celcius(temp=0) "
+    "fahr_to_celsius(temp=0) "
    ]
   },
   {
