Fix typo in 02-numpy

--- a/02-numpy.ipynb
+++ b/02-numpy.ipynb
@@ -410,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "print('maximum inflammation for patient 2:', numpy.max(data[2, :]))"
+    "print('maximum inflammation for patient 3:', numpy.max(data[2, :]))"
    ]
   },
   {
@@ -542,7 +542,7 @@
    "id": "49f1d0a5",
    "metadata": {},
    "source": [
-    "Print the first three patients, their first fourth inflammation values:"
+    "Print the first three patients, their first four inflammation values:"
    ]
   },
   {
