--- a/solutions/02-numpy.ipynb
+++ b/solutions/02-numpy.ipynb
@@ -430,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "print('maximum inflammation for patient 2:', numpy.max(data[2, :]))"
+    "print('maximum inflammation for patient 3:', numpy.max(data[2, :]))"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "id": "49f1d0a5",
    "metadata": {},
    "source": [
-    "Print the first three patients, their first fourth inflammation values:"
+    "Print the first three patients, their first four inflammation values:"
    ]
   },
   {
