Added code cells for small exercice in 01

--- a/01-fundamentals.ipynb
+++ b/01-fundamentals.ipynb
@@ -366,7 +366,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edff8513",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "mass = 47.5\n",
@@ -374,6 +376,18 @@
     "mass = mass * 2.0\n",
     "age = age - 20"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49611f00",
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -389,13 +403,27 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ed03739b",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "planet = 'Earth'\n",
     "apples = 5\n",
     "distance = 10.5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e0e7482",
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
