--- a/solutions/01-fundamentals.ipynb
+++ b/solutions/01-fundamentals.ipynb
@@ -377,13 +377,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edff8513",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "mass = 47.5\n",
     "age = 122\n",
     "mass = mass * 2.0\n",
     "age = age - 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49611f00",
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "print(mass,age)"
    ]
   },
   {
@@ -400,12 +416,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ed03739b",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "planet = 'Earth'\n",
     "apples = 5\n",
     "distance = 10.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e0e7482",
+   "metadata": {
+    "tags": [
+     "empty"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "print(type(planet), type(apples), type(distance))"
    ]
   },
   {
